--- a/Mean-Project/angular.json
+++ b/Mean-Project/angular.json
@@ -38,9 +38,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.js"
-            ]
+            "scripts": []
+
           },
           "configurations": {
             "production": {
